--- a/naaf-console-app/src/main/resources/application.yml
+++ b/naaf-console-app/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
 mybatis:
   mapper-locations: classpath:mappers/*.xml,classpath:META-INF/mybatis/mapper/*.xml,classpath:mybatis-mapper/*.xml
   type-aliases-package: com.feiniaojin.naaf.console.entity
+
+pulsar:
+  service:
+      url: pulsar://localhost:6650
+  topic:
+    user_info_event: my-topic
