--- a/naaf-console-ohs-web/pom.xml
+++ b/naaf-console-ohs-web/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>naaf-console-protocol-schedule</artifactId>
+    <artifactId>naaf-console-ohs-web</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -15,6 +15,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.feiniaojin.naaf</groupId>
             <artifactId>naaf-console-service</artifactId>
