--- a/naaf-console-service/pom.xml
+++ b/naaf-console-service/pom.xml
@@ -17,6 +17,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.feiniaojin.naaf</groupId>
+            <artifactId>naaf-console-commons</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
