--- a/naaf-console-test/pom.xml
+++ b/naaf-console-test/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>com.feiniaojin.naaf</groupId>
-            <artifactId>naaf-console-protocol-web</artifactId>
+            <artifactId>naaf-console-ohs-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
