--- a/naaf-console-service/pom.xml
+++ b/naaf-console-service/pom.xml
@@ -17,17 +17,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.feiniaojin.naaf</groupId>
             <artifactId>naaf-console-commons</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.feiniaojin.naaf</groupId>
-            <artifactId>naaf-console-integration-id</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -55,19 +60,7 @@
         </dependency>
         <dependency>
             <groupId>com.feiniaojin.naaf</groupId>
-            <artifactId>naaf-console-adapter-dao</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.feiniaojin.naaf</groupId>
-            <artifactId>naaf-console-adapter-http</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.feiniaojin.naaf</groupId>
-            <artifactId>naaf-console-adapter-mq-publisher</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.feiniaojin.naaf</groupId>
-            <artifactId>naaf-console-adapter-rpc-consumer</artifactId>
+            <artifactId>naaf-console-infrastructure-persistence</artifactId>
         </dependency>
         <dependency>
             <groupId>com.feiniaojin.naaf.ngr</groupId>
